# linaro-adfu-tool

./: CMakeLists.txt  README.md
conf/: 51-linaro-adfu-tool.rules  linaro-adfu-tool.conf
firmwares/: Terms of Use.docx
src/: CMakeLists.txt  conf.c  conf.h  linaro-adfu-tool-bg96.c  main.c
tools/: extract_actions_fw.py
